--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,6 +5,7 @@
   top: 0;
   left: 0;
   right: 0;
+
   &__container {
     @include container;
     height: 100%;
@@ -28,6 +29,7 @@
     flex: 1 1 83.6%;
   }
 }
+
 .menu {
   display: flex;
   justify-content: space-between;
@@ -42,7 +44,7 @@
 
   &__body {
     height: 100%;
-    width: 30.37%;
+    width: 338px;
   }
 
   &__list {
