--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,9 @@
 //Те що часто використовується
 @import "often";
 
+// Variable
+@import "variable";
+
 @import "../../node_modules/swiper/swiper.scss";
 @import "../../node_modules/swiper/modules/navigation/navigation.scss";
 @import "../../node_modules/swiper/modules/pagination/pagination.scss";
@@ -65,15 +68,27 @@ main {
     height: 100%;
     width: 100%;
     img {
+      width: 100%;
       height: 100%;
     }
   }
 }
-.swiper-button-prev {
+.scrollbar-navigation {
+  width: 250px;
+  display: flex;
+  justify-content: space-between;
   position: absolute;
   z-index: 5;
   top: 61.83%;
-  left: 69.9%;
+  right: 171px;
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 1.18%;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
+.scrollbar-navigation .swiper-button-prev {
+  position: static;
   font-weight: 300;
   font-size: 11px;
   line-height: 1.18%;
@@ -85,11 +100,12 @@ main {
     font-size: 9px;
   }
 }
-.swiper-button-next {
-  position: absolute;
-  z-index: 5;
-  top: 61.83%;
-  left: 85.53%;
+.scrollbar-navigation .swiper-button-next {
+  position: static;
+  //  position: absolute;
+  //  z-index: 5;
+  //  top: 61.83%;
+  //  left: 85.53%;
   font-weight: 300;
   font-size: 11px;
   line-height: 1.18%;
@@ -111,15 +127,16 @@ main {
 //}
 .swiper-horizontal > .swiper-scrollbar,
 .swiper-scrollbar.swiper-scrollbar-horizontal {
-  z-index: 5;
-  top: 61.83%;
-  left: 72%;
-  width: 12.91%;
+  position: static;
+  //  z-index: 5;
+  //  top: 61.83%;
+  //  left: 72%;
+  width: 186px;
   height: 1px;
   background: rgba(255, 255, 255, 0.32);
 }
 .swiper-scrollbar-drag {
-  z-index: 5;
+  //  z-index: 5;
   background: rgba(255, 255, 255);
 }
 
@@ -128,7 +145,7 @@ main {
     position: absolute;
     width: 569px;
     height: 122px;
-    left: 263px;
+    left: 18.26%;
     top: 279px;
     z-index: 11;
     font-size: 56px;
@@ -137,14 +154,18 @@ main {
 
   &__discover-more {
     @include discover-more;
+
+    position: absolute;
+    top: 453px;
+    left: 18.26%;
   }
 
   &__data-box {
     width: 634px;
     position: absolute;
     z-index: 11;
-    left: 64px;
-    top: 685px;
+    left: var(--pdng-conteiner, 63px);
+    bottom: 40px;
     display: flex;
     font-weight: 600;
     font-size: 11px;
@@ -198,7 +219,7 @@ main {
     margin-left: 72px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    // justify-content: space-between;
     align-items: center;
   }
 
@@ -209,20 +230,49 @@ main {
   }
 
   &__email {
+    margin-left: 40px;
   }
 
   &__email-link {
   }
 
   &__column {
+    z-index: 11;
+    position: absolute;
+    right: 3.96%;
+    bottom: 6%;
+    transform: rotate(-90deg) translate(102px, 102px);
   }
 
   &__next {
+    margin-bottom: 8px;
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 13px;
+    letter-spacing: 0.06em;
   }
 
   &__next-link {
   }
 
   &__vertical-slogan {
+    width: 318px;
+    height: 93px;
+    font-size: 3.33vw;
+    line-height: 3.26vw;
+    letter-spacing: 0.04em;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 1px #fff;
+  }
+}
+@media (max-width: 1024px) {
+  .first-section {
+    height: 710px;
+    &__slogan {
+      font-size: 48px;
+    }
+    &__location {
+      margin-left: 79px;
+    }
   }
 }
