--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -9,10 +9,19 @@
 
   &__container {
     @include container;
-    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+
+  &__zero {
+    position: absolute;
+    top: -100vw;
+    width: 100vw;
+    height: 100vw;
+    left: 0;
+    transition: all 0.9s ease 0s;
+    z-index: 6;
   }
 
   &__logo {
@@ -22,6 +31,7 @@
     line-height: 17px;
     letter-spacing: 0.3em;
     text-transform: uppercase;
+    z-index: 2;
   }
 
   //  Впорядкувати між == &__menu ==  та ==.menu ==
@@ -41,8 +51,6 @@
 
   &__burger {
     display: none;
-    span {
-    }
   }
 
   &__body {
@@ -76,6 +84,7 @@
   //Винести в окремий модуль  &__button
   &__button {
     @include button;
+    z-index: 2;
   }
 }
 
@@ -86,9 +95,13 @@
   .menu {
     &__burger {
       width: 87px;
+      height: 100%;
       display: flex;
       justify-content: space-between;
       align-items: center;
+    }
+    &__heading._active {
+      display: none;
     }
     &__burger-icon {
       width: 28px;
@@ -103,7 +116,7 @@
         background-color: #ffffff;
         position: absolute;
         width: 100%;
-        height: 2.5px;
+        height: 1px;
         left: 0;
         transition: all 0.3s ease 0s;
       }
@@ -115,15 +128,36 @@
       }
       &._active:before {
         transform: rotate(45deg);
-        top: 9px;
+        top: 4px;
       }
       &._active::after {
         transform: rotate(-45deg);
         bottom: 8px;
       }
     }
-    &__body {
+    &__list {
       display: none;
+      //&._active {
+      //  position: absolute;
+      //  top: 0;
+      //  left: 0;
+      //  width: 100vw;
+      //  height: 100vw;
+      //  display: block;
+      //  background: #080808;
+      //  opacity: 0.98;
+      //}
+    }
+  }
+  .header__zero._active {
+    top: 0;
+    background: #080808;
+    opacity: 0.98;
+    transition: all 0.9s ease 0s;
+  }
+  .first-section {
+    &__data-box {
+      z-index: 111;
     }
   }
 }
