--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -36,19 +36,40 @@
   @include data-box;
 
   &__logo {
-    flex: 1 1 15.3%;
+    // margin-right: 10.73%;
+    flex: 1 1 15.56%;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
     letter-spacing: 0.3em;
     text-transform: uppercase;
     z-index: 2;
+    a {
+      width: 153px;
+      display: block;
+    }
+    @media (max-width: 1024px) {
+      flex: 1 1 17.12%;
+    }
+    @media (max-width: 768px) {
+      flex: 1 1 22.77%;
+      a {
+        width: auto;
+      }
+    }
   }
 
   //  Впорядкувати між == &__menu ==  та ==.menu ==
   &__menu {
+    // width: 100%;
     height: 100%;
     flex: 1 1 83.6%;
+    @media (max-width: 1024px) {
+      flex: 1 1 82.69%;
+    }
+    @media (max-width: 768px) {
+      flex: 1 1 77.23%;
+    }
   }
 }
 
@@ -66,7 +87,10 @@
 
   &__body {
     height: 100%;
-    width: 338px;
+    width: auto;
+    @media (max-width: 600px) {
+      order: 2;
+    }
   }
 
   &__list {
@@ -77,8 +101,9 @@
     // column-gap: 14.2%;
   }
 
-  //  &__item {
-  //  }
+  &__item {
+    margin-right: 48px;
+  }
 
   //  &__link {
   //  }
@@ -88,6 +113,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @media (max-width: 1024px) {
+      width: 231px;
+    }
+    @media (max-width: 600px) {
+      order: 1;
+    }
   }
 
   &__language {
@@ -97,14 +128,18 @@
   &__button {
     @include button;
     z-index: 2;
+    @media (max-width: 1024px) {
+      width: 158px;
+    }
   }
 }
 
 @media (max-width: 1024px) {
   :root {
-    --pdng-conteiner: 55px;
+    // --pdng-conteiner: 55px;
   }
   .menu {
+    position: relative;
     &__burger {
       width: 87px;
       height: 100%;
@@ -121,7 +156,9 @@
       position: relative;
       height: 14px;
       z-index: 4;
-
+      &._active {
+        margin-left: 9px;
+      }
       &:before,
       &:after {
         content: "";
@@ -149,16 +186,25 @@
     }
     &__list {
       display: none;
-      //&._active {
-      //  position: absolute;
-      //  top: 0;
-      //  left: 0;
-      //  width: 100vw;
-      //  height: 100vw;
-      //  display: block;
-      //  background: #080808;
-      //  opacity: 0.98;
-      //}
+      width: 233px;
+      height: 322px;
+      position: absolute;
+      top: 28vh;
+      left: 10px;
+      margin-bottom: 96px;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: start;
+      font-size: 32px;
+      line-height: 121.875%;
+      color: #ffffff;
+      //transform: translateY(-50%);
+      & li {
+        opacity: 0.5;
+      }
+      &._active {
+        display: flex;
+      }
     }
   }
   .header__zero._active {
@@ -175,7 +221,7 @@
 }
 @media (max-width: 764px) {
   :root {
-    --pdng-conteiner: 48px;
+    // --pdng-conteiner: 48px;
   }
   .menu {
     &__burger {
@@ -184,8 +230,9 @@
   }
 }
 @media (max-width: 600px) {
+  //????
   :root {
-    --pdng-conteiner: 24px;
+    // --pdng-conteiner: 24px;//??????
   }
   .menu {
     width: 99px;
