--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -307,6 +307,41 @@ main {
   }
 }
 
+.toolbar {
+  display: none;
+  @media (max-width: 600px) {
+    display: block;
+    width: 100%;
+    height: 55px;
+  }
+  &__conteiner {
+    width: 100%;
+    height: 100%;
+    padding: 0 8px;
+    margin: 0 auto;
+    // box-sizing: content-box;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__icon-box {
+    width: 44px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // font-family: 'SF Pro Text';
+  }
+
+  &__icon {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 21px;
+    line-height: 105%;
+    color: #2e7cf6;
+  }
+}
+
 .second-section {
   width: 100%;
   max-height: 1358px;
