--- a/src/scss/fonts/icons.scss
+++ b/src/scss/fonts/icons.scss
@@ -38,10 +38,10 @@
 .icon-down-arrowhead:before {
   content: "\e907";
 }
-.icon-Exit:before {
+.icon-exit:before {
   content: "\e908";
 }
-.icon-Facebook:before {
+.icon-facebook:before {
   content: "\e909";
 }
 .icon-geotag:before {
@@ -56,7 +56,7 @@
 .icon-linkedin:before {
   content: "\e910";
 }
-.icon-Plus:before {
+.icon-plus:before {
   content: "\e911";
 }
 .icon-right-arrowhead:before {
